// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatefulPrompt > compressedSteps edge cases > should handle complex nested state objects 1`] = `
{
  "stateProgression": {
    "step0": {
      "a.b.c": 0,
      "a.d": [],
    },
    "step1": {
      "a.b.c": 1,
      "a.d": [],
    },
    "step2": {
      "a.b.c": 1,
      "a.d": [
        1,
        2,
        3,
      ],
    },
  },
  "stats": {
    "savingsRatio": 0.4444444444444444,
    "stepCount": 3,
    "totalUncompressedMessages": 9,
    "uniqueMessages": 5,
  },
}
`;

exports[`StatefulPrompt > compressedSteps edge cases > should handle effect that injects messages 1`] = `
{
  "injectedMessages": [
    "[System injection at step 1: processed 1 items, last: processed_test]",
    "[System injection at step 1: processed 1 items, last: processed_test]",
    "[System injection at step 2: processed 2 items, last: processed_more]",
    "[System injection at step 2: processed 2 items, last: processed_more]",
    "[System injection at step 2: processed 2 items, last: processed_more]",
  ],
  "states": [
    {
      "lastResult": null,
      "processedCount": 0,
    },
    {
      "lastResult": "processed_test",
      "processedCount": 1,
    },
    {
      "lastResult": "processed_more",
      "processedCount": 2,
    },
  ],
  "stats": {
    "savingsRatio": 0.5,
    "stepCount": 3,
    "totalUncompressedMessages": 6,
    "uniqueMessages": 3,
  },
}
`;

exports[`StatefulPrompt > compressedSteps edge cases > should handle empty steps and edge message patterns 1`] = `
{
  "outputContents": [
    "[tool-call][text]",
    "[tool-call]Something",
    "[tool-call][text]",
    "Final",
  ],
  "stats": {
    "savingsRatio": 0.5625,
    "stepCount": 4,
    "totalUncompressedMessages": 16,
    "uniqueMessages": 7,
  },
}
`;

exports[`StatefulPrompt > compressedSteps edge cases > should handle large multi-step execution with effects modifying messages 1`] = `
{
  "effectLogs": [
    {
      "action": "counter_changed_to_0",
      "step": 0,
    },
    {
      "action": "counter_changed_to_1",
      "step": 1,
    },
    {
      "action": "counter_changed_to_2",
      "step": 2,
    },
    {
      "action": "counter_changed_to_3",
      "step": 3,
    },
    {
      "action": "counter_changed_to_4",
      "step": 4,
    },
  ],
  "messagePoolSize": 29,
  "stateHistory": [
    {
      "state": {
        "counter": 0,
        "historyLen": 0,
      },
      "step": 0,
    },
    {
      "state": {
        "counter": 1,
        "historyLen": 1,
      },
      "step": 1,
    },
    {
      "state": {
        "counter": 1,
        "historyLen": 1,
      },
      "step": 1,
    },
    {
      "state": {
        "counter": 2,
        "historyLen": 2,
      },
      "step": 2,
    },
    {
      "state": {
        "counter": 2,
        "historyLen": 2,
      },
      "step": 2,
    },
  ],
  "stats": {
    "savingsRatio": 0.7363636363636363,
    "stepCount": 10,
    "totalUncompressedMessages": 110,
    "uniqueMessages": 29,
  },
  "stepsOverview": [
    {
      "configMode": "normal",
      "counterValue": 0,
      "deltaCount": 2,
      "deltaStart": 0,
      "messageCount": 2,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 0,
    },
    {
      "configMode": "normal",
      "counterValue": 1,
      "deltaCount": 4,
      "deltaStart": 0,
      "messageCount": 4,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 1,
    },
    {
      "configMode": "normal",
      "counterValue": 2,
      "deltaCount": 6,
      "deltaStart": 0,
      "messageCount": 6,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 2,
    },
    {
      "configMode": "normal",
      "counterValue": 3,
      "deltaCount": 8,
      "deltaStart": 0,
      "messageCount": 8,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 3,
    },
    {
      "configMode": "normal",
      "counterValue": 4,
      "deltaCount": 10,
      "deltaStart": 0,
      "messageCount": 10,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 4,
    },
    {
      "configMode": "advanced",
      "counterValue": 5,
      "deltaCount": 12,
      "deltaStart": 0,
      "messageCount": 12,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 5,
    },
    {
      "configMode": "advanced",
      "counterValue": 6,
      "deltaCount": 14,
      "deltaStart": 0,
      "messageCount": 14,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 6,
    },
    {
      "configMode": "advanced",
      "counterValue": 7,
      "deltaCount": 16,
      "deltaStart": 0,
      "messageCount": 16,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 7,
    },
    {
      "configMode": "expert",
      "counterValue": 8,
      "deltaCount": 18,
      "deltaStart": 0,
      "messageCount": 18,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 8,
    },
    {
      "configMode": "expert",
      "counterValue": 9,
      "deltaCount": 20,
      "deltaStart": 0,
      "messageCount": 20,
      "stateKeys": [
        "counter",
        "history",
        "config",
      ],
      "stepIndex": 9,
    },
  ],
}
`;

exports[`StatefulPrompt > compressedSteps edge cases > should handle system prompt that changes every step 1`] = `
{
  "stats": {
    "savingsRatio": 0.5333333333333333,
    "stepCount": 5,
    "totalUncompressedMessages": 30,
    "uniqueMessages": 14,
  },
  "stepsOverview": [
    {
      "deltaStart": 0,
      "firstMessageRef": 0,
      "messageCount": 2,
      "stepIndex": 0,
    },
    {
      "deltaStart": 0,
      "firstMessageRef": 2,
      "messageCount": 4,
      "stepIndex": 1,
    },
    {
      "deltaStart": 0,
      "firstMessageRef": 5,
      "messageCount": 6,
      "stepIndex": 2,
    },
    {
      "deltaStart": 0,
      "firstMessageRef": 8,
      "messageCount": 8,
      "stepIndex": 3,
    },
    {
      "deltaStart": 0,
      "firstMessageRef": 11,
      "messageCount": 10,
      "stepIndex": 4,
    },
  ],
}
`;

exports[`StatefulPrompt > compressedSteps with state > should include state snapshots in compressedSteps 1`] = `
{
  "messagePool": [
    {
      "content": [
        {
          "text": "Counter is 0, name is initial",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Response 1",
          "type": "text",
        },
        {
          "input": {
            "increment": 5,
          },
          "toolCallId": "1",
          "toolName": "updateCounter",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "newValue": 10,
            },
          },
          "toolCallId": "1",
          "toolName": "updateCounter",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "stats": {
    "savingsRatio": 0.25,
    "stepCount": 2,
    "totalUncompressedMessages": 4,
    "uniqueMessages": 3,
  },
  "steps": [
    {
      "deltaStart": 0,
      "messageRefs": [
        0,
      ],
      "output": {
        "content": [
          {
            "input": {
              "increment": 5,
            },
            "toolCallId": "1",
            "toolName": "updateCounter",
            "type": "tool-call",
          },
          {
            "text": "Response 1",
            "type": "text",
          },
        ],
        "finishReason": "tool-calls",
      },
      "state": {
        "counter": 0,
        "name": "initial",
      },
      "stepIndex": 0,
    },
    {
      "deltaStart": 1,
      "messageRefs": [
        0,
        1,
        2,
      ],
      "output": {
        "content": [
          {
            "text": "Response 2",
            "type": "text",
          },
        ],
        "finishReason": "stop",
      },
      "state": {
        "counter": 5,
        "name": "updated",
      },
      "stepIndex": 1,
    },
  ],
}
`;

exports[`StatefulPrompt > should allow step modifications from effects 1`] = `
{
  "modifiedAspect": "messages",
  "modifiedItems": [
    {
      "content": "Modified message",
      "role": "system",
    },
  ],
  "stepModifierCalled": true,
  "steps": [
    {
      "input": {
        "prompt": [
          {
            "content": "Modified message",
            "role": "system",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;

exports[`StatefulPrompt > should create state with defState 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Hello!",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Hello World",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`StatefulPrompt > should maintain state across re-executions 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Current count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "value": 1,
          },
          "toolCallId": "1",
          "toolName": "testTool",
          "type": "tool-call",
        },
        {
          "text": "First response",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Current count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "First response",
              "type": "text",
            },
            {
              "input": {
                "value": 1,
              },
              "toolCallId": "1",
              "toolName": "testTool",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "newCount": 2,
                  "success": true,
                },
              },
              "toolCallId": "1",
              "toolName": "testTool",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Second response",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`StatefulPrompt > should provide prompt context to effects 1`] = `
{
  "hasMessages": true,
  "hasSystems": true,
  "hasTools": true,
  "hasVariables": true,
  "lastTool": null,
  "stepNumber": 0,
}
`;

exports[`StatefulPrompt > should run effects with dependencies 1`] = `
{
  "effectRuns": [
    {
      "runCount": 1,
      "stateValue": [Function],
      "stepNumber": 0,
    },
  ],
  "finalDependency": [Function],
  "steps": [
    {
      "input": {
        "prompt": [
          {
            "content": [
              {
                "text": "Starting with value: 0",
                "type": "text",
              },
            ],
            "role": "user",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;

exports[`StatefulPrompt > should run effects without dependencies on every step 1`] = `
{
  "runCount": 1,
  "stepNumbers": [
    0,
  ],
  "steps": [
    {
      "input": {
        "prompt": [
          {
            "content": [
              {
                "text": "Test message",
                "type": "text",
              },
            ],
            "role": "user",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;
